crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@218.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM t WHERE a IS NULL;
---
SelectStmt@0..32
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..15
    Ident@14..15 "t"
  Whitespace@15..16 " "
  Where@16..21 "WHERE"
  Whitespace@21..22 " "
  NullTest@22..31
    ColumnRef@22..23
      Ident@22..23 "a"
    Whitespace@23..24 " "
    Is@24..26 "IS"
    Whitespace@26..27 " "
    NullP@27..31 "NULL"
  Ascii59@31..32 ";"

