crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@225.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT count(*)\n  FROM pg_attribute\n  WHERE attrelid = 'ft1'::regclass AND\n    (attmissingval IS NOT NULL OR atthasmissing);"
---
SelectStmt@0..124
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Newline@15..16 "\n"
  Whitespace@16..18 "  "
  From@18..22 "FROM"
  Whitespace@22..23 " "
  RangeVar@23..35
    Ident@23..35 "pg_attribute"
  Newline@35..36 "\n"
  Whitespace@36..38 "  "
  Where@38..43 "WHERE"
  Whitespace@43..44 " "
  BoolExpr@44..122
    AExpr@44..70
      ColumnRef@44..52
        Ident@44..52 "attrelid"
      Whitespace@52..53 " "
      Ascii61@53..54 "="
      Whitespace@54..55 " "
      TypeCast@55..70
        AConst@55..60
          Sconst@55..60 "'ft1'"
        Typecast@60..62 "::"
        TypeName@62..70
          Ident@62..70 "regclass"
    Whitespace@70..71 " "
    And@71..74 "AND"
    Newline@74..75 "\n"
    Whitespace@75..79 "    "
    Ascii40@79..80 "("
    BoolExpr@80..122
      NullTest@80..105
        ColumnRef@80..93
          Ident@80..93 "attmissingval"
        Whitespace@93..94 " "
        Is@94..96 "IS"
        Whitespace@96..97 " "
        Not@97..100 "NOT"
        Whitespace@100..101 " "
        NullP@101..105 "NULL"
      Whitespace@105..106 " "
      Or@106..108 "OR"
      Whitespace@108..109 " "
      ColumnRef@109..122
        Ident@109..122 "atthasmissing"
  Ascii41@122..123 ")"
  Ascii59@123..124 ";"

