crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE m(id OID);
---
CreateStmt@0..23
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..14
    Ident@13..14 "m"
  Ascii40@14..15 "("
  ColumnDef@15..21
    Ident@15..17 "id"
    Whitespace@17..18 " "
    TypeName@18..21
      Ident@18..21 "OID"
  Ascii41@21..22 ")"
  Ascii59@22..23 ";"

