crates/pg_syntax/tests/snapshots/postgres_regress/fast_default@34.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO T VALUES (19), (20);"
---
InsertStmt@0..32
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..13
    Ident@12..13 "T"
  Whitespace@13..14 " "
  SelectStmt@14..30
    Values@14..20 "VALUES"
    Whitespace@20..21 " "
    Ascii40@21..22 "("
    List@22..24
      AConst@22..24
        Iconst@22..24 "19"
    Ascii41@24..25 ")"
    Ascii44@25..26 ","
    Whitespace@26..27 " "
    Ascii40@27..28 "("
    List@28..30
      AConst@28..30
        Iconst@28..30 "20"
  Ascii41@30..31 ")"
  Ascii59@31..32 ";"

